--- a/client/src/App.css
+++ b/client/src/App.css
@@ -101,3 +101,45 @@ button:hover {
   cursor: pointer; /* Pointer cursor for interactivity */
   font-weight: bold; /* Bold text for emphasis */
 }
+
+/* Navbar Styles */
+.custom-navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #2b3e71;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.custom-navbar ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: flex-end;
+  margin: 0;
+  padding: 0;
+}
+
+.custom-navbar li {
+  margin-left: 30px;
+}
+
+.custom-navbar a {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+  text-align: center;
+  padding: 15px 20px;
+  transition: background-color 0.3s;
+}
+
+.custom-navbar a:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+}
+
+body {
+  padding-top: 80px;
+}
