--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,18 @@
  @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.loader {
+  border: 8px solid transparent; /* Outer border */
+  border-top-color: transparent; /* The color of the spinning part */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 
 /* 
 :root {
